# SousChef

./: .gitignore  .mcpbignore  CLAUDE.md  README.md  manifest.json  pyproject.toml
docs/superpowers/plans/: 2026-03-20-grecipe-implementation.md  2026-03-21-souschef-update.md
docs/superpowers/specs/: 2026-03-20-grecipe-design.md  2026-03-21-souschef-update-design.md
scripts/: build-release.sh
skills/souschef/: SKILL.md
src/grecipe/: __init__.py  units.py
src/grecipe/cli/: chat.py  db_cmd.py  display.py  grocery.py  main.py  plan.py  recipe.py  tag.py  utils.py
src/grecipe/db/: connection.py  schema.py
src/grecipe/display/: __init__.py  renderer.py
src/grecipe/models/: chat.py  grocery.py  history.py  plan.py  recipe.py
src/grecipe/scraper/: url.py
src/souschef/: __init__.py  units.py  update.py
src/souschef/cli/: chat.py  db_cmd.py  display.py  grocery.py  main.py  plan.py  recipe.py  tag.py  update.py  utils.py
src/souschef/db/: connection.py  schema.py  seed.py
src/souschef/display/: renderer.py
src/souschef/mcp/: __init__.py  server.py  tools.py
src/souschef/models/: __init__.py  chat.py  dietary.py  (+6 more)
tests/: conftest.py  test_chat_model.py  test_db_schema.py  test_display.py  test_grocery_model.py  test_history_model.py  test_integration.py  test_plan_model.py  test_quality_fixes.py  test_recipe_model.py  test_scraper.py  test_tag_model.py  test_units.py  test_update.py
tests/test_cli/: test_chat_cli.py  test_db_cli.py  test_display_cli.py  test_grocery_cli.py  test_plan_cli.py  test_recipe_cli.py  test_tag_cli.py  test_update_cli.py
(+4 files in other folders)
