[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grecipe"
version = "0.1.0"
description = "Recipe management CLI for Claude Cowork"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15",
    "httpx>=0.28",
    "beautifulsoup4>=4.12",
    "recipe-scrapers>=15.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[project.scripts]
grecipe = "grecipe.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/grecipe"]
